# ldrs_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crop_bag.py  evaluate_ldls_results.py  package.xml  requirements.txt  write_ldls_bag.py
msg/: Result.msg  Segmentation.msg
src/: detections.py  evaluation.py  segmentation.py  utils.py
